# estacionalidad

./: .gitignore  README.md  main.py  mock_data.xlsx  pipy_deploy.py  pyproject.toml  serie_mensual_indices_comex.xls  trimestral2024.xlsx
src/Plot/: __init__.py  config.py
src/Wrangling/: __init__.py
src/estacionalidad/: __init__.py
src/estacionalidad/Plot/: __init__.py  abstract_clases.py  config.py  table.py
src/estacionalidad/Wrangling/: __init__.py  read_series_indices_indec.py
src/estacionalidad/utils/: lang.py
